Atualizando projeto para o Spring Boot 3